[package]
name = "warp-websockets-example"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"

[dependencies]
futures = { version = "0.3", default-features = false }
lazy_static = "1.4.0"
regex = "1.3.9"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros", "sync", "rt-threaded"] }
uuid = { version = "0.4", features = ["serde", "v4"] }
warp = "0.2"
